// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should render 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 4px;
  padding-left: 8px;
}

.c3 {
  margin-top: 2px;
}

.c0 {
  background: hsla(216,15%,54%,0.09);
  padding: 8px 8px 12px 8px;
  border-radius: 4px;
  border-color: hsla(216,15%,54%,0.32);
  border-width: 1px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-width: 584px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(214,18%,69%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c5:hover {
  color: hsla(217,18%,45%,1);
}

.c5:focus {
  outline: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  color: hsla(217,18%,45%,1);
}

.c5:active {
  color: hsla(217,18%,45%,1);
}

.c4 {
  padding: 0;
  margin: 0;
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
}

<div>
  <div
    class=" c0"
    data-blade-component="alert"
    role="status"
  >
    <div
      class="c1"
      display="flex"
    >
      <svg
        aria-hidden="true"
        data-blade-component="icon"
        fill="none"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
          fill="hsla(216, 27%, 36%, 1)"
        />
        <path
          d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
          fill="hsla(216, 27%, 36%, 1)"
        />
        <path
          clip-rule="evenodd"
          d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
          fill="hsla(216, 27%, 36%, 1)"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <p
          class="c4 Text__StyledText-wkh56f-0"
          color="surface.text.subtle.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="75"
          font-style="normal"
          font-weight="regular"
        >
          Currently you can only accept payments in international currencies using PayPal.
        </p>
      </div>
    </div>
    <button
      aria-label="Dismiss alert"
      class="c5"
      data-blade-component="icon-button"
      type="button"
    >
      <svg
        aria-hidden="true"
        data-blade-component="icon"
        fill="none"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Alert /> should render positive intent and full width 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 12px;
  padding-left: 12px;
}

.c3 {
  margin-top: 2px;
}

.c0 {
  background: hsla(155,100%,31%,0.09);
  padding: 12px 16px;
  border-radius: 0px;
  border-color: hsla(155,100%,31%,0.32);
  border-width: 0px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(214,18%,69%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c5:hover {
  color: hsla(217,18%,45%,1);
}

.c5:focus {
  outline: none;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  color: hsla(217,18%,45%,1);
}

.c5:active {
  color: hsla(217,18%,45%,1);
}

.c4 {
  padding: 0;
  margin: 0;
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
}

<div>
  <div
    class=" c0"
    data-blade-component="alert"
    role="status"
  >
    <div
      class="c1"
      display="flex"
    >
      <svg
        aria-hidden="true"
        data-blade-component="icon"
        fill="none"
        height="20px"
        viewBox="0 0 24 24"
        width="20px"
      >
        <g
          clip-path="url(#clip0_60_208)"
        >
          <path
            d="M4.15845 7.14679C6.74812 4.11688 11.0222 3.1512 14.663 4.77343C15.1675 4.99821 15.7586 4.77147 15.9834 4.267C16.2082 3.76253 15.9815 3.17135 15.477 2.94657C11.0272 0.96385 5.80325 2.14413 2.6381 5.84735C-0.527049 9.55057 -0.879431 14.8946 1.77205 18.9813C4.42353 23.0681 9.44725 24.9241 14.1189 23.5429C18.7905 22.1616 21.9972 17.8716 22 13V12.07C22 11.5177 21.5523 11.07 21 11.07C20.4477 11.07 20 11.5177 20 12.07V12.9994C19.9977 16.9852 17.3741 20.4948 13.5518 21.6249C9.72957 22.7551 5.61926 21.2365 3.44986 17.8928C1.28047 14.5491 1.56878 10.1767 4.15845 7.14679Z"
            fill="hsla(160, 100%, 26%, 1)"
          />
          <path
            d="M22.7071 4.70711C23.0976 4.31658 23.0976 3.68342 22.7071 3.29289C22.3166 2.90237 21.6834 2.90237 21.2929 3.29289L11 13.5858L8.70711 11.2929C8.31658 10.9024 7.68342 10.9024 7.29289 11.2929C6.90237 11.6834 6.90237 12.3166 7.29289 12.7071L10.2929 15.7071C10.6834 16.0976 11.3166 16.0976 11.7071 15.7071L22.7071 4.70711Z"
            fill="hsla(160, 100%, 26%, 1)"
          />
        </g>
        <defs>
          <clippath
            id="clip0_60_208"
          >
            <rect
              fill="white"
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <p
          class="c4 Text__StyledText-wkh56f-0"
          color="surface.text.subtle.lowContrast"
          data-blade-component="text"
          font-family="text"
          font-size="100"
          font-style="normal"
          font-weight="regular"
        >
          Currently you can only accept payments in international currencies using PayPal.
        </p>
      </div>
    </div>
    <button
      aria-label="Dismiss alert"
      class="c5"
      data-blade-component="icon-button"
      type="button"
    >
      <svg
        aria-hidden="true"
        data-blade-component="icon"
        fill="none"
        height="20px"
        viewBox="0 0 24 24"
        width="20px"
      >
        <path
          d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;
